@@ -686,6 +686,10 @@ class Nikola(object):
                                       'FEED_READ_MORE_LINK',
                                       'INDEXES_TITLE',
                                       'CATEGORY_DESTPATH_NAMES',
+                                      'CATEGORY_TITLES',
+                                      'CATEGORY_DESCRIPTIONS',
+                                      'TAG_TITLES',
+                                      'TAG_DESCRIPTIONS',
                                       'INDEXES_PAGES',
                                       'INDEXES_PRETTY_PAGE_URL',
                                       'THEME_CONFIG',
